--- a/app/templates/companyreg.html
+++ b/app/templates/companyreg.html
@@ -1,16 +1,20 @@
 <!-- Company Reg Section -->
 
-{% extends 'layout.html' %}
-
-{% block title %}Company Registration{% endblock %}
-
+{% extends 'layout.html' %} {% block title %}Company Registration{% endblock %}
 {% block content %}
-<div class="text-center p-8 rounded-lg mx-auto shadow-md max-w-2xl my-20 bg-white">
-  <h1 class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2">
+<div
+  class="text-center p-8 dark:bg-gray-800 rounded-lg shadow-md dark:shadow-gray-900/30 transition-all duration-300  mx-auto max-w-2xl my-20 bg-white"
+>
+  <h1
+    class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2 dark:text-white transition-colors duration-300"
+  >
     <i class="fa-solid fa-address-card text-red-400"></i>
     {{ _('Company Registration Section') }}
   </h1>
-  <p class="text-gray-600 mb-6">{{ _('This feature is coming soon. We\'re working hard to bring you an improved company registration experience.') }}</p>
+  <p class="text-gray-600 mb-6">
+    {{ _('This feature is coming soon. We\'re working hard to bring you an
+    improved company registration experience.') }}
+  </p>
   <p class="text-gray-600">{{ _('Thank you for your patience!') }}</p>
 </div>
 {% endblock %}
