--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -44,7 +44,7 @@
 
   </head>
 
-  <body class="min-h-screen flex dark:bg-gray-900 dark:text-gray-200  text-gray-800">
+  <body class="min-h-screen font-serif flex dark:bg-gray-900 dark:text-gray-200  text-gray-800">
     <div>{% include 'sidebar.html' %} {% include 'mobileSidebar.html' %}</div>
 
     <div class="flex-1 flex flex-col p-4">
@@ -94,6 +94,7 @@
     <script src="../static/js/attendance_chart.js"></script>
     <script src="../static/js/activity_chart.js"></script>
     <script src="../static/js/topbar.js"></script>
+    <script src="../static/js/invoiceschart.js"></script>
 
     {% block scripts %} {% endblock %}
   </body>
