--- a/app/templates/payroll.html
+++ b/app/templates/payroll.html
@@ -3,10 +3,10 @@
 {% extends 'layout.html' %} {% block title %}Payroll{% endblock %} {% block
 content %}
 <div
-  class="text-center p-8 rounded-lg mx-auto shadow-md max-w-2xl my-20 bg-white"
+  class="text-center p-8 dark:bg-gray-800 rounded-lg shadow-md dark:shadow-gray-900/30 transition-all duration-300  mx-auto max-w-2xl my-20 bg-white"
 >
   <h1
-    class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2"
+    class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2 dark:text-white transition-colors duration-300"
   >
     <i class="fa-solid fa-money-bill text-green-500"></i>
     {{ _('Payroll') }}
